[package]
name = "year-2023-cargo-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.46.1"
geo = "0.27.0"
grid = "0.12.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
nom = "7.1.3"
num-traits = "0.2.17"
pathfinding = "4.6.0"
prime_factorization = "1.0.4"
regex = "1.10.2"
