[package]
name = "year-2024-cargo-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
grid = "0.15.0"
itertools = "0.13.0"
nom = "7.1.3"
rusttype = "0.9.3"

