[package]
name = "year-2025-cargo-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
btree-range-map = "0.7.2"
colored = "3.0.0"
divisors = "0.2.1"
grid = "0.15.0"
iter-first-max = "0.1.2"
itertools = "0.13.0"
nom = "7.1.3"
regex = "1.12.2"
rusttype = "0.9.3"

